@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-03-07T00:38:02Z",
-  "count_outdated" : 1245,
-  "uniques_outdated" : 767,
-  "count" : 1263,
-  "uniques" : 785,
+  "timestamp" : "2025-03-08T00:29:53Z",
+  "count_outdated" : 1247,
+  "uniques_outdated" : 769,
+  "count" : 1264,
+  "uniques" : 786,
   "clones" : [
-    {
-      "timestamp": "2025-02-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 2, 2 ],
-      "uniques_decinc": [ 0, 2 ]
-    },
     {
       "timestamp": "2025-02-22T00:00:00Z",
       "count": 3,
@@ -112,6 +103,15 @@
       "uniques": 3,
       "uniques_minmax": [ 3, 3 ],
       "uniques_decinc": [ 0, 3 ]
+    },
+    {
+      "timestamp": "2025-03-07T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
